#1616: Converted GetCancellationTypes UC to extend BasePaginatedMultipleEntitiesCommand